/*
BrewTheory
Copyright (C) 2022  Joshua Farr

This program is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program.  If not, see <http://www.gnu.org/licenses/>.
*/

syntax = "proto3";

package brewtheory;

option go_package = "internal/electron/proto";

import "common.proto";


// A key exchange client request
message KeyExchangeRequest {
	RequestHeader header = 1;
	bytes publicKey = 2;
}

// A key exchange server response
message KeyExchangeResponse {
	ResponseHeader header = 1;
	bytes publicKey = 2;
	string token = 3;
}
